--- a/Assignment5-text-analysis.ipynb
+++ b/Assignment5-text-analysis.ipynb
@@ -517,7 +517,6 @@
     "    # Define the scoring metric\n",
     "    scoring = make_scorer(f1_score, average='macro')\n",
     "\n",
-    "    # Perform grid search for each model\n",
     "    for model_name, model in models_list.items():\n",
     "        params = params_list[model_name]\n",
     "\n",
@@ -535,25 +534,23 @@
     "            for norm in norms:\n",
     "                # Create the feature vectors with the vectorizer\n",
     "                X_features = vectorizer.fit_transform(X)\n",
-    "\n",
-    "                # Apply normalization to the feature vectors\n",
+    "                \"\"\"\n",
     "                if norm == 'l1':\n",
     "                    X_features = StandardScaler(with_mean=False).fit_transform(X_features)\n",
     "                elif norm == 'l2':\n",
-    "                    X_features = StandardScaler(with_mean=False, with_std=False).fit_transform(X_features)\n",
-    "\n",
+    "                \"\"\"\n",
+    "                # Apply normalization to the feature vectors\n",
+    "                X_features = StandardScaler(with_mean=False, with_std=False).fit_transform(X_features)\n",
     "                # Create the grid search object\n",
     "                grid_search = GridSearchCV(model, params, cv=10, scoring=scoring)\n",
-    "\n",
     "                # Fit the grid search to the data\n",
     "                grid_search.fit(X_features, y)\n",
-    "\n",
+    "                \n",
     "                # Print the best parameters and score\n",
     "                print(f\"Model: {model_name}, Vectorizer: {vec_name}, Normalization: {norm}\")\n",
     "                print(\"Best Parameters:\", grid_search.best_params_)\n",
     "                print(\"Best F1-macro Score:\", grid_search.best_score_)\n",
-    "\n",
-    "                # Evaluate the model on the test data\n",
+    "                # Evaluate the model on the train data\n",
     "                y_pred = grid_search.predict(X_features)\n",
     "                print(\"Classification Report:\")\n",
     "                print(classification_report(y, y_pred))\n",
