--- a/Assignment5-text-analysis.ipynb
+++ b/Assignment5-text-analysis.ipynb
@@ -498,6 +498,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First I wanted to try the models with the default values and only using vectorizer with a simple tokenizer."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 33,
    "metadata": {},
@@ -573,6 +580,13 @@
     "}\n",
     "X_train, y_train = handle_train(df_train)\n",
     "perform_simple_prediction(models_list, X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then I wanted to try with normalizing the data."
    ]
   },
   {
@@ -655,6 +669,13 @@
     "}\n",
     "X_train, y_train = handle_train(df_train)\n",
     "perform_prediction_normalizing(models_list, X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then I wanted to try with scaling."
    ]
   },
   {
@@ -979,7 +1000,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In conclusion, the best model I got was- LinearSVC with count vectorizer"
+    "In conclusion, the best model I got was- LinearSVC with count vectorizer:"
    ]
   },
   {
@@ -1023,6 +1044,13 @@
     "cv_scores = cross_val_score(best_model, X_features, y_train, cv=10, scoring=scoring)\n",
     "mean_score = cv_scores.mean()\n",
     "print(\"f1_macro mean:\", mean_score)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here is the confusion matrix for the training set:"
    ]
   },
   {
@@ -1109,6 +1137,13 @@
     "\n",
     "# Predict labels for the test set\n",
     "predicted_test = best_model.predict(X_test_features)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Predict:"
    ]
   },
   {
@@ -1273,6 +1308,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I wanted to see that the percentage of men is close to what it was in the training set."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 53,
    "metadata": {},
@@ -1336,13 +1378,6 @@
     "sizes = gender_counts.values.tolist()\n",
     "plt.pie(sizes, labels=labels, autopct='%1.1f%%')\n",
     "plt.axis('equal')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Here is the confusion matrix:"
    ]
   },
   {
